--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,30 +1,29 @@
-name: Node.js CI
+name: Test Manual Workflow
 
 on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+  workflow_dispatch:
+    inputs:
+      Environnement:
+        description: 'The environment i need to deploy on'
+        required: true
+        default: '/dev'
 
 jobs:
-  build:
+  manual-job:
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [14.x, 16.x, 18.x]
+    environment: dev
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.node-version }}
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Run tests
-        run: npm test
+      
+      - name: Example
+        run: |
+          echo "Mon exemple"
+          echo "Env Name: ${{ github.event.inputs.Environment }}"
+      - name: Github variable
+        run: echo '${{ toJSON(github)}}'
+      - name: Runner Variable
+        run: echo '${{ toJSON(runner)}}'
+      - name: Secrets Variable
+        run: echo '${{ toJSON(secrets)}}'
+      - name: Env Variable
+        run: echo '${{ toJSON(vars.MY_API_URL)}}'
