--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,28 +2,29 @@ name: Node.js CI
 
 on:
   push:
-    branch:
-      -master
-    pull_request:
-      -master
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
 
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: action/checkout@v2
+      - uses: actions/checkout@v3
 
-      - name : Instamm Node
+      - name: Install Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 20
-      
-      - name : Install Dependencies
+
+      - name: Install Dependencies
         run: npm install
 
       - name: ESLint (JS/TS) Action
         run: npx eslint "*.js"
-      
-      - name: Tests
-        run : npm test
+
+      - name: Run Tests
+        run: npm test
