--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
+    "eslint-plugin-vitest": "^0.5.4",
     "globals": "^15.14.0",
     "jest": "^29.7.0",
     "jsdom": "^26.0.0",
