--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,19 +1,19 @@
-module.exports = {
-    env: {
-      node: true,
-      es2021: true,
-      jest: true,
+{
+    "env": {
+      "node": true,
+      "es2021": true,
+      "jest": true
     },
-    extends: [
+    "extends": [
       "eslint:recommended",
-      "plugin:jest/recommended",
+      "plugin:jest/recommended"
     ],
-    parserOptions: {
-      ecmaVersion: "latest",
-      sourceType: "module",
+    "parserOptions": {
+      "ecmaVersion": "latest",
+      "sourceType": "module"
     },
-    rules: {
-      "no-console": "off",
-    },
-  };
+    "rules": {
+      "no-console": "off"
+    }
+  }
   
