--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test": "jest"
+    "test": "vitest"
   },
   "dependencies": {
     "react": "^19.0.0",
@@ -22,14 +22,10 @@
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.19.0",
-    "eslint-plugin-jest": "^28.11.0",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
-    "eslint-plugin-testing-library": "^7.1.1",
-    "eslint-plugin-vitest": "^0.5.4",
     "globals": "^15.14.0",
-    "jest": "^29.7.0",
     "jsdom": "^26.0.0",
     "vite": "^6.1.0",
     "vitest": "^3.0.5"
