--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "vitest",
+    "update-readme": "node update-readme.js"
   },
   "dependencies": {
     "react": "^19.0.0",
