--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,13 +29,15 @@ jobs:
         run: npm run update-readme
 
       - name: Verify changes in README
+        id: verify_changes
         run: |
           if git diff --exit-code README.md; then
             echo "No changes to commit in README.md"
-            exit 1
+            echo "no_changes=true" >> $GITHUB_ENV
           fi
 
       - name: Commit and push changes
+        if: env.no_changes != 'true'
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
